--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
 gunicorn==19.9.0
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.0
 pipenv==2018.7.1
 virtualenv==16.0.0
 virtualenv-clone==0.3.0
 visitor==0.1.3
-Werkzeug==0.14.1
+Werkzeug>=0.15.3
